<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    tools:context=".MainActivity">


    <!-- Заголовок -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp" />


    <!-- Текущие данные -->

    <!-- Название -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/name_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Количество -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/amount_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Цена -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/price_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Стоимость -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/coast_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <!-- Ввод данных -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/input_block_label"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- Название -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/etx_name"
            android:text="@string/name_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etx_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Количество -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/etx_amount"
            android:text="@string/amount_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etx_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="20sp" />
    </LinearLayout>


    <!-- Цена -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/etx_price"
            android:text="@string/price_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etx_price"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Сообщение об ошибке -->
    <TextView
        android:id="@+id/txv_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Кнопки управления -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/save_btn_label"
            android:layout_marginEnd="10dp"
            android:onClick="saveData"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/exit_btn_label"
            android:onClick="exit"/>
    </LinearLayout>
</LinearLayout>